--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+/src/main/java/se/umu/cs/ads/a1/backend/grpc/generated
 
 ### IntelliJ IDEA ###
 .idea/modules.xml
