Added missing files

--- a/pom.xml
+++ b/pom.xml
@@ -27,8 +27,12 @@
         <protoc.version>3.21.1</protoc.version>
         <grpc.version>1.47.0</grpc.version>
     </properties>
-
     <dependencies>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.13</version>
+        </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
